app/assets/stylesheets/components/_form.css.sass
$form-gutter: 12px
$form-offset: 11px

.field
  //overflow: hidden
  margin-bottom: 1.5em
  label, .editor, .hint, .error
    display: inline-block
    color: $medium-gray
  label
    text-align: right
    font-size: 1.2em
    vertical-align: top
    margin-top: $form-offset
    width: 17%
    padding: 0 $form-gutter 0 0
  .editor
    width: 80%
    position: relative
    input[type="text"],
    input[type="number"],
    input.time,
    textarea
      padding: 7px
      font-family: 'Open Sans', Arial, sans-serif
      font-size: 1.3em
      width: 57%
      border: 1px solid $lightest-gray
      +rounded-corners(3px,3px,3px,3px)
      background-color: $gray-background
      +box-shadow(0 1px 2px rgba(0,0,0,0.1) inset)
      +transition(background-color 0.3s ease-in, border-color 0.3s ease-in)
      &:focus
        background-color: white
        border-color: $link-blue
        outline: none
      &.error-input:focus
        border-color: darken($red, 10%)
    &.fit-two input[type="text"], &.fit-two input[type="number"]
      width: 27%
      margin-right: 1%
    input[type="number"]
      padding-top: 8px
      padding-bottom: 8px
    input.datepicker, input.time
      width: 8em !important
    .datepicker
      margin-right: 1%
  .hint
    vertical-align: top
    max-width: 40%
    font-size: 1.2em
    color: $medium-gray
    padding: 0 0 0 $form-gutter
    margin-left: $form-gutter
    opacity: 0
    &.tip
      padding: .7em .9em
      background-color: white
      background-color: rgba(255,255,255,0.95)
      +transition(opacity 0.3s ease-in-out)
      border-color: darken($light-rule, 3%)
      +box-shadow(0 1px 3px rgba(0,0,0,0.05))
      .arrow-left
        border-right-color: white
      .arrow-left-border
        border-right-color: darken($light-rule, 5%)
  .error
    font-size: 1.2em
    padding: .6em .9em
    background: darken($red, 3%)
    border: 1px solid darken($red, 16%)
    color: white
    +box-shadow(0 1px 1px rgba(255,255,255,0.25) inset)
    +border-radius(3px)

    display: block
    max-width: 57% !important
    position: static
    margin: .3em 0 .2em 0
    width: 57%
    text-align: center
    +transition(opacity 0.3s ease-in-out)

  input[type="text"]:focus + .hint,
  textarea:focus + .hint,
  input[type="number"]:focus + .hint,
  cf-field-editor:focus .hint
    opacity: 1
  .sub-fields
    width: 57%
    label
      width: 40%
      input, input[type="text"]
        width: 100%
        font-size: 13px
      span
        display: block
        margin-top: 5px
        text-align: left
    button
      margin-top: 13px

.controls
  button.dropdown-toggle
    color: $medium-gray
    &:hover
      color: $medium-gray
    i
      color: $light-gray
      position: relative
      font-size: .9em
      top: 1px
      left: -3px

.editor 
  .results
    top: auto
    margin-top: 0px
    left: 16px
  .results, .search-field
    &.btn-right-on
      margin-right: 90px
      &.search-options-on
        right: 44px

.editor
  .search-field
    margin-top: 10px
    height: 35px
    input[type="search"]
      width: 85%
      padding: 0.6em 0.7em 0.5em
    .dropdown-toggle
      height: 33px
      width: 44px
      .ss-search
        top: .25em
      .ss-dropdown
        top: .4em
        right: .3em

.field
  // Styling for specific types
  &[data-field-type=boolean] .editor,
  &[data-field-type=array] .editor
    label
      width: auto
      position: relative
      top: -2px
    span
      position: relative
      top: 2px

.field
  &[data-field-type=link]
    margin: 25px 0 15px
    .links 
      border-top: 1px solid $light-rule
      margin-bottom: 1.5em
      li
        line-height: 1.5em
        font-size: 1.3em
        padding: 10px 7px
        border-bottom: 1px solid $light-rule
      .ss-delete
        float: right
        margin-top: 1px

